# c-training

./: .gitignore  CMakeLists.txt  README.md  main.c  udp.c
A/: CMakeLists.txt  assignment10.c  assignment11.c  assignment12.c  assignment13.c  assignment14.c  assignment15.c  assignment16.c  assignment17.c  assignment18.c  assignment19.c  assignment2.c  assignment20.c  assignment21.c  assignment22.c  assignment23.c  assignment24.c  assignment25.c  assignment26.c  assignment27.c  assignment28.c  assignment3-extra.c  assignment3.c  assignment4.c  assignment5.c  assignment6.c  assignment7.c  assignment8.c  assignment9.c  helloworld.c
B/: CMakeLists.txt  tcp.c
B/03-tcp-ip-client-server/: client.c  server.c
B/04-udp-echo-client-server/: client.c  server.c
lc/: 0675-cut-off-trees-for-golf-event.c  0675-cut-off-trees-for-golf-event.cpp  CMakeLists.txt
tars/: CMakeLists.txt  main.cpp  tc_epoll_server.h  tc_epoller.h
