project(A)

add_executable(helloworld helloworld.c)
add_executable(assignment2 assignment2.c)
add_executable(assignment3 assignment3.c)
add_executable(assignment3-extra assignment3-extra.c)
add_executable(assignment4 assignment4.c)
add_executable(assignment5 assignment5.c)
add_executable(assignment6 assignment6.c)
add_executable(assignment7 assignment7.c)
add_executable(assignment8 assignment8.c)
add_executable(assignment9 assignment9.c)
add_executable(assignment10 assignment10.c)
add_executable(assignment11 assignment11.c)