project(A)

add_executable(helloworld helloworld.c)
add_executable(assignment2 assignment2.c)
add_executable(assignment3 assignment3.c)
add_executable(assignment3-extra assignment3-extra.c)
add_executable(assignment4 assignment4.c)
add_executable(assignment5 assignment5.c)
add_executable(assignment6 assignment6.c)
add_executable(assignment7 assignment7.c)
add_executable(assignment8 assignment8.c)
add_executable(assignment9 assignment9.c)
add_executable(assignment10 assignment10.c)
add_executable(assignment11 assignment11.c)
add_executable(assignment12 assignment12.c)
add_executable(assignment13 assignment13.c)
add_executable(assignment14 assignment14.c)
add_executable(assignment15 assignment15.c)
add_executable(assignment16 assignment16.c)
add_executable(assignment17 assignment17.c)
add_executable(assignment18 assignment18.c)
add_executable(assignment19 assignment19.c)
add_executable(assignment20 assignment20.c)
add_executable(assignment21 assignment21.c)
add_executable(assignment22 assignment22.c)
add_executable(assignment23 assignment23.c)
add_executable(assignment24 assignment24.c)
add_executable(assignment25 assignment25.c)
add_executable(assignment26 assignment26.c)
add_executable(assignment27 assignment27.c)
add_executable(assignment28 assignment28.c)
