project(B)

add_executable(B tcp.c)
add_executable(03-server 03-tcp-ip-client-server/server.c)
add_executable(03-client 03-tcp-ip-client-server/client.c)
add_executable(04-server 04-udp-echo-client-server/server.c)
add_executable(04-client 04-udp-echo-client-server/client.c)
add_executable(05-server 05-day-time-server-tcp-ip/server.c)
add_executable(05-client 05-day-time-server-tcp-ip/client.c)
add_executable(06-server 06-half-duplex-chat-tcp-ip/server.c)
add_executable(06-client 06-half-duplex-chat-tcp-ip/client.c)
add_executable(07-server 07-full-duplex-chat-tcp-ip/server.c)
add_executable(07-client 07-full-duplex-chat-tcp-ip/client.c)
add_executable(08-server 08-file-transfer-protocol/server.c)
add_executable(08-client 08-file-transfer-protocol/client.c)
add_executable(09-server 09-remote-command-execution-udp/server.c)
add_executable(09-client 09-remote-command-execution-udp/client.c)
add_executable(10-client 10-ARP-implementation-using-UDP/arp.c)
